--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/shoes/addSneakers">Add new sneaker</a>
+              <a class="nav-link" href="/shoes/addSneakers">Add new Sneaker</a>
             </li> 
           </ul>
         </div>
