--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
                   Size: <%= shoe.size %><br>
                   Price: $<%= shoe.price %>
                 </p>
-                <a href="/viewSneaker/<%= shoe.id %>" class="btn btn-primary">View Details</a>
+                <a href="/shoes/viewSneaker/<%= shoe.id %>" class="btn btn-primary">View Details</a>
               </div>
               <% if (shoe.image_url) { %>
                 <img src="<%= shoe.image_path %>" class="card-img-bottom" alt="Shoe Image">
