--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>We Are Sneakers</title>
 </head>
@@ -15,10 +15,25 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="/shoes/addSneakers">Add new Sneaker</a>
-            </li> 
+            </li>
+
+            <% if (!session || !session.user) { %>
+              <!-- Show Register and Login if user not logged in -->
+              <li class="nav-item">
+                <a class="nav-link" href="/user/register">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/user/login">Login</a>
+              </li>
+            <% } else { %>
+              <!-- Show Logout if logged in -->
+              <li class="nav-item">
+                <a class="nav-link" href="/user/logout">Logout</a>
+              </li>
+            <% } %>
           </ul>
         </div>
       </div>
@@ -43,7 +58,7 @@
                   Size: <%= shoe.size %><br>
                   Price: $<%= shoe.price %>
                   <% if (shoe.image_path) { %>
-                  <img src="<%= shoe.image_path %>" class="card-img-bottom" width="40px" height="400px" alt="Shoe Image">
+                    <img src="<%= shoe.image_path %>" class="card-img-bottom" width="40px" height="400px" alt="Shoe Image" />
                   <% } %>
                 </p>
                 <a href="/shoes/viewSneaker/<%= shoe.id %>" class="btn btn-primary">View Details</a>
@@ -53,5 +68,6 @@
         <% }); %>
       </div>
     <% } %>
+  </div>
 </body>
 </html>
