--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
 <body>
     <div class="container">
         <h1 class="mt-5">Login</h1>
+
         <% if (errors && errors.length > 0) { %>
             <div class="alert alert-danger">
                 <% errors.forEach(function(error) { %>
@@ -14,6 +15,7 @@
                 <% }); %>
             </div>
         <% } %>
+
         <% if (messages && messages.length > 0) { %>
             <div class="alert alert-success">
                 <% messages.forEach(function(message) { %>
@@ -21,17 +23,37 @@
                 <% }); %>
             </div>
         <% } %>
-        <form action="/login" method="POST" class="mt-4">
+
+        <form action="/user/login" method="POST" class="mt-4">
             <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" class="form-control" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary">Login</button>
+            <div class="form-check mt-2">
+                <input class="form-check-input" type="checkbox" value="" id="showPassword" onclick="togglePassword()">
+                <label class="form-check-label" for="showPassword">
+                    Show Password
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary mt-3">Login</button>
         </form>
+
+        <p class="mt-3"><a href="/shoes">Back to Home</a></p>
     </div>
+
+    <script>
+      function togglePassword() {
+        var pwd = document.getElementById("password");
+        if (pwd.type === "password") {
+          pwd.type = "text";
+        } else {
+          pwd.type = "password";
+        }
+      }
+    </script>
 </body>
 </html>
