--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,7 +42,7 @@
             <button type="submit" class="btn btn-primary mt-3">Login</button>
         </form>
 
-        <p class="mt-3"><a href="/shoes">Back to Home</a></p>
+        <p class="mt-3"><a href="/user/register">Sign Up</a></p>
     </div>
 
     <script>
