--- a/views/register.ejs
+++ b/views/register.ejs
@@ -64,7 +64,7 @@
             <button type="submit" class="btn btn-primary mt-3">Register</button>
         </form>
 
-        <p class="mt-3"><a href="/shoes">Back to Home</a></p>
+        <p class="mt-3"><a href="/user/login">Back to Login</a></p>
     </div>
 
     <script>
