enchancements + new features for /addSneakers

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,6 +11,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">We Are Sneakers</a>
+      <a class="nav-link text-white" href="/shoes/addSneakers">Add new Sneaker</a>
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
