/addSneakers enhancements part 2

--- a/views/addSneakers.ejs
+++ b/views/addSneakers.ejs
@@ -120,8 +120,8 @@
       <option value="" selected disabled>Select condition</option>
       <option value="New">New</option>
       <option value="Used - Like New">Used - Like New</option>
-      <option value="Used">Used</option>
-      <option value="Refurbished">Refurbished</option>
+      <option value="Used">Lightly Used</option>
+      <option value="Refurbished">Heavily Used</option>
     </select>
   </div>
 
