--- a/views/addSneakers.ejs
+++ b/views/addSneakers.ejs
@@ -19,26 +19,35 @@
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-<div class="container-fluid">
-  <a class="navbar-brand" href="/">We Are Sneakers</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#collapsibleNavbar"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/shoes/addSneakers">Add new Sneaker</a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark px-3">
+  <div class="container-fluid">
+    <div class="d-flex align-items-center gap-2">
+      <a class="navbar-brand mb-0" href="/">We Are Sneakers</a>
+      <a href="/shoes/addSneakers" class="btn btn-outline-light btn-sm">Add Sneaker</a>
+    </div>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#collapsibleNavbar"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <% if (session && session.user) { %>
+        <li class="nav-item">
+          <a href="/user/logout" class="btn btn-outline-light btn-sm">Logout</a>
+        </li>
+        <% } %>
+      </ul>
+    </div>
   </div>
-</div>
 </nav>
+
+
 
 <div class="container my-4">
 <div class="text-center mb-4">
