--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,43 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>We Are Sneakers</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <title>We Are Sneakers</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">We Are Sneakers</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/shoes/addSneakers">Add new Sneaker</a>
-            </li>
-
-            <% if (!session || !session.user) { %>
-              <!-- Show Register and Login if user not logged in -->
-              <li class="nav-item">
-                <a class="nav-link" href="/user/register">Register</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/login">Login</a>
-              </li>
-            <% } else { %>
-              <!-- Show Logout if logged in -->
-              <li class="nav-item">
-                <a class="nav-link" href="/user/logout">Logout</a>
-              </li>
-            <% } %>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <div class="d-flex align-items-center">
+        <a class="navbar-brand me-3" href="/">We Are Sneakers</a>
+        <a href="/shoes/addSneakers" class="btn btn-outline-light btn-sm">Add Sneakers</a>
       </div>
-    </nav>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <% if (!session || !session.user) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/register">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/user/login">Login</a>
+            </li>
+          <% } else { %>
+            <li class="nav-item">
+              <a class="btn btn-outline-light btn-sm mt-1" href="/user/logout">Logout</a>
+            </li>
+          <% } %>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <div class="container py-5">
     <h1 class="mb-4 text-center">Shoe Listings</h1>
