Refactor views for consistency and maintainability

--- a/views/addSneakers.ejs
+++ b/views/addSneakers.ejs
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark px-3">
   <div class="container-fluid">
     <div class="d-flex align-items-center gap-2">
-      <a class="navbar-brand mb-0" href="/">We Are Sneakers</a>
+      <a class="navbar-brand mb-0" href="/shoes/">We Are Sneakers</a>
       <a href="/shoes/addSneakers" class="btn btn-outline-light btn-sm">Add Sneaker</a>
     </div>
 
