--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
       <div class="d-flex align-items-center">
-        <a class="navbar-brand me-3" href="/">We Are Sneakers</a>
+        <a class="navbar-brand me-3" href="/shoes/">We Are Sneakers</a>
         <a href="/shoes/addSneakers" class="btn btn-outline-light btn-sm">Add Sneakers</a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
