--- a/views/viewSneaker.ejs
+++ b/views/viewSneaker.ejs
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Sneakers Shop</a>
+          <a class="navbar-brand" href="/shoes/">We Are Sneakers</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -44,7 +44,7 @@
         <% } else { %>
             <p>No shoes found.</p>
         <% } %>
-        <a href ="/">Back</a>
+        <a href ="/shoes/">Back</a>
     </div>
     
 </body>
