Refactor code structure for improved readability and maintainability

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
             </li>
           <% } else { %>
             <li class="nav-item">
-              <a class="btn btn-outline-light btn-sm mt-1" href="/user/logout">Logout</a>
+              <a class="btn btn-outline-light btn-sm mt-1" href="/logout">Logout</a>
             </li>
           <% } %>
         </ul>
