--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="btn btn-outline-light btn-sm mt-1" href="/user/logout">Logout</a>
+            <a class="btn btn-outline-light btn-sm mt-1" href="/logout">Logout</a>
           </li>
         </ul>
       </div>
