add to cart button + Cart.ejs

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -20,6 +20,9 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
         <ul class="navbar-nav">
           <li class="nav-item">
+              <a class="btn btn-outline-light btn-sm mt-1 me-2" href="/shoes/cart">Cart</a>
+            </li>
+          <li class="nav-item">
             <a class="btn btn-outline-light btn-sm mt-1" href="/logout">Logout</a>
           </li>
         </ul>
