--- a/views/viewSneaker.ejs
+++ b/views/viewSneaker.ejs
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="/shoes/addSneakers">Add new sneakers</a>
+                <a href="/shoes/addSneakers" class="btn btn-outline-light btn-sm">Add Sneakers</a>
               </li> 
             </ul>
           </div>
