Added a favourite button, directs to the favourites.ejs, and chatgpt prmpts

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,8 +40,13 @@
               <i class="bi bi-cart"></i> Cart
             </a>
           </li>
+           <li class="nav-item me-3">
+              <a href="/shoes/favourites" class="btn btn-outline-light btn-sm">
+              <i class="bi bi-heart"></i> Favourites
+            </a>
+          </li>
           <li class="nav-item">
-            <a class="btn btn-outline-light btn-sm" href="/logout">
+              <a class="btn btn-outline-light btn-sm" href="/logout">
               <i class="bi bi-box-arrow-right"></i> Logout
             </a>
           </li>
